# Stellar-Save

contracts/guess-the-number/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
contracts/guess-the-number/src/: error.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/guess-the-number/test_snapshots/test/: test_activate_group_fails_if_already_active.1.json  test_activate_group_fails_without_members.1.json  test_activate_group_success.1.json  test_get_group_returns_correct_data.1.json  test_is_group_active_returns_false_for_cancelled_group.1.json  test_is_group_active_returns_false_for_completed_group.1.json  test_is_group_active_returns_false_for_forming_group.1.json  test_is_group_active_returns_false_for_nonexistent_group.1.json  test_is_group_active_returns_false_for_zero_members.1.json  test_is_group_active_returns_false_when_members_exceed_max.1.json  test_is_group_active_returns_true_at_max_capacity.1.json  test_is_group_active_returns_true_for_valid_active_group.1.json  test_is_group_active_returns_true_with_one_member.1.json
contracts/stellar-save/src/: helpers.rs  lib.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CycleProgress.tsx  index.ts
